--- a/.env
+++ b/.env
@@ -1,29 +1,10 @@
 FLASK_ENV=development
-DATABASE_URL=postgresql://ezuka_user:Pytha1991@localhost/'ezuka'
+DATABASE_URL=postgresql://ezuka_db_user:b3ot5HRDQAqHAvvft2uoms5oQ7JhGaI1@dpg-d0p4ql8dl3ps73ag3fa0-a/ezuka_db
+
 MAIL_USERNAME=moua19878@gmail.com
 MAIL_PASSWORD=yebymjdfpwjqsevt
-  
-#table de transfert
-
-import os
-
-class Config:
-    SQLALCHEMY_DATABASE_URI = 'postgresql://ezuka_user:Pytha1991@localhost/'ezuka''
-    SQLALCHEMY_TRACK_MODIFICATIONS = False
-    MAIL_SERVER = 'smtp.gmail.com'
-    MAIL_PORT = 587
-    MAIL_USE_TLS = True
-    MAIL_USERNAME = 'moua19878@gmail.com'
-    MAIL_PASSWORD = 'yebymjdfpwjqsevt'  # Utilisez un mot de passe d'application Gmail sécurisé
-    MAIL_DEFAULT_SENDER = 'moua19878@gmail.com'
-
-
-
-SQLALCHEMY_DATABASE_URI=postgresql://ezuka_user:Pytha1991@localhost/ezuka
-SECRET_KEY=your_secret_key
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
-MAIL_USERNAME=moua19878@gmail.com
-MAIL_PASSWORD=yebymjdfpwjqsevt
 
+SECRET_KEY=your_secret_key
